# ptrace-inst

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/helloworld/: helloworld  helloworld.c  main.py
libptrace_inst/: defs.h  process.cpp  process.h  ptrace_inst.cpp  ptrace_inst.h
ptrace_inst/: libwrap.py  ptrace_inst.py
